--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
 			<script src="assets/js/main.js"></script>
                         <script src="assets/js/main_eth.js"></script>			
 		        <script src="assets/js/crypto-js.min.js"></script>
+			<script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
 			<script src="assets/js/setting.js"></script>
 
 </body>
