--- a/index.html
+++ b/index.html
@@ -203,6 +203,8 @@
                         <script src="assets/js/main_eth.js"></script>			
 		        <script src="assets/js/crypto-js.min.js"></script>
 			<script src="settings.js"></script>
+			<script src="https://cdn.jsdelivr.net/npm/web3@1.5.3/dist/web3.min.js"></script>
+
 
 </body>
 
